--- a/main.Rmd
+++ b/main.Rmd
@@ -1,12 +1,47 @@
-setwd(if (requireNamespace("rstudioapi", quietly=TRUE) && rstudioapi::isAvailable()) dirname(rstudioapi::getActiveDocumentContext()$path) else getwd())
+---
+title: "Seminární projekt (Časové řady)"
+author: "Ondřej Švorc, Kristina Gavrina"
+---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(warning=FALSE, message=FALSE)
+pdf.options(encoding='ISOLatin2.enc')
 library(zoo)
 library(lmtest)
 library(forecast)
+```
 
-# Transformace datasetu, primárně denormalizace vybraných proměnných a přetypování proměnných na správné datové typy.
-# Některé proměnné byly autorem normalizovány pro účely strojového učení (např. teplota byla reprezentována intervalem <0, 1>).
-# Přidání dodatečné proměnné, která je spojením dne a měřené hodiny výpůjčky kola pro čitelnější časovou osu u grafů.
+**Zpracovávaná data**
+<ol type="i">
+  <li>data budou obsahovat více potenciálně závislých řad</li>
+  <li>zvolíte si jednu řadu jako hlavní</li>
+  <li>hlavní řada by měla mít evidentní sezónní složku a optimálně i trendu</li>
+</ol>
+
+**Řešení by mělo obsahovat**
+<ol type="i">
+  <li>grafické zobrazení řady + stručný komentář</li>
+  <li>dekompozice + identifikace trendu pomocí vyhlazení řady (klouzavé průměry či exponenciální vyrovnání)</li>
+  <li>hledání optimálního modelu pro samotnou řadu (funkční zápis trendu + sezónnost)</li>
+  <li>hledání optimálního modelu typu SARIMA</li>
+  <li>hledání závislostí na jiných řadách (identifikace řad, které mohou mít vliv pomoci kroskorelační funkce + nalezení "zpoždění závislosti")</li>
+  <li>hledání optimálního modelu kombinujícího závislost na ostatních řadách a řešení autokorelace</li>
+  <li>u nalezených modelů v krocích iii), iv) a vi) zkontrolujte, zda jsou splněny předpoklady regresních modelů, tj. především nezávislost residuí (stačí přes autokorelační funkci)</li>
+  <li>u vhodných modelů predikujte 10 budoucích pozorování, predikce i s intervaly spolehlivosti vykreslete a výsledky komentujte (který model Vám přijde pro predikci nejlepší)</li>
+</ol>
+
+U každého kroku by mělo být uvedeno, jakou metodu používáte a proč, co Vám z ní vyšlo a jak vypadá "optimální model" v daném kroku.
+
+### Nastavení pracovní složky
+```{r}
+setwd(if (requireNamespace("rstudioapi", quietly=TRUE) && rstudioapi::isAvailable()) dirname(rstudioapi::getActiveDocumentContext()$path) else getwd())
+```
+
+### Transformace datasetu
+
+Primárně denormalizace vybraných proměnných a přetypování proměnných na správné datové typy. Některé proměnné byly autorem normalizovány pro účely strojového učení (např. teplota byla reprezentována intervalem <0, 1>). Přidání dodatečné proměnné, která je spojením dne a měřené hodiny výpůjčky kola pro čitelnější časovou osu u grafů.
+
+```{r}
 rows_3_months <- 2067
 bike_sharing <- read.csv("bike_sharing.csv", nrows = rows_3_months)
 bike_sharing$dteday <- as.Date(bike_sharing$dteday)
@@ -24,15 +59,22 @@ bike_sharing$atemp <- bike_sharing$atemp * (50 - (-16)) + (-16)
 bike_sharing$datetime <- as.POSIXct(paste(bike_sharing$dteday, bike_sharing$hr), format = "%Y-%m-%d %H")
 str(bike_sharing)
 head(bike_sharing)
+```
 
-# i)
+### i)
 
-# Pozvolna rostoucí lineární trend (lidé začínají více jezdit, pravděpodobně kvůli zlepšujícímu se počasí).
+Pozvolna rostoucí lineární trend (lidé začínají více jezdit, pravděpodobně kvůli zlepšujícímu se počasí).
+```{r}
 plot(x = bike_sharing$datetime, y = bike_sharing$cnt, type = "l", col = "steelblue", xlab = "Měsíc", ylab = "Počet jízd", main = "Počet jízd (cnt)")
+```
 
-get_subset <- function(data, days) {
-  data[1:(days*24), ]
+```{r}
+get_subset <- function(data, days) { 
+  data[1:(days*24), ] 
 }
+```
+
+```{r}
 plot_cnt_days <- function(data, title) {
   plot(data$datetime, data$cnt, type="l", col="steelblue", xlab="Den a měsíc", ylab="Počet jízd", main=title, xaxt="n")
   axis.POSIXct(1, at=seq(from=min(data$datetime), to=max(data$datetime), by="1 day"), format="%d.%m")
@@ -40,24 +82,35 @@ plot_cnt_days <- function(data, title) {
   abline(v=seq(from=min(data$datetime), to=max(data$datetime), by="1 day"), col="lightgray", lty="dotted")
   grid(nx=NA, ny=NULL, col="gray", lty="dotted")
 }
+```
+
+```{r}
 plot_cnt_hours <- function(data, title) {
   plot(data$datetime, data$cnt, type="l", col="steelblue", xlab="Hodina", ylab="Počet jízd", main=title, xaxt="n")
   axis.POSIXct(1, at=seq(from=min(data$datetime), to=max(data$datetime), by="1 hour"), format="%H:%M", cex.axis=0.7, tcl=-0.3)
   abline(v=seq(from=min(data$datetime), to=max(data$datetime), by="1 hour"), col="lightgray", lty="dotted")
   grid(nx=NA, ny=NULL, col="gray", lty="dotted")
 }
-# Denní sezónnost, pravidelné cykly (špičky ráno/odpoledne, noční minimum), kalendářní vlivy (pracovní den vs víkend).
-# Pracovní dny mají podobný průběh (špičky), víkend má nižší průběh (plošší křivka).
-# Intradenní průběh dále zvýrazňuje výkyvy v čase.
-plot_cnt_days(get_subset(bike_sharing, days = 14), "Počet jízd (14 dní)")
-plot_cnt_days(get_subset(bike_sharing, days = 7), "Počet jízd (7 dní)")
-plot_cnt_hours(get_subset(bike_sharing, days = 2), "Počet jízd (2 pracovní dny)")
-plot_cnt_hours(get_subset(bike_sharing, days = 1), "Počet jízd (pracovní den)")
+```
 
-# V pracovní dny je jasně vidět ranní a odpolední dopravní špička, zatímco o víkendu je průběh plošší a maximum nastává spíše odpoledne.
-# Interpretace může být taková, že lidé chodí v pracovní dny ráno do práce/školy a odpoledne ze školy/práce, tak si kolo v tento čas vypůjčují nejvíce.
-# O víkendech si zase lidé obecně rádi přispí, takže nárust výpůjček začíná až v pozdějších dopoledních a odpoledních hodinách, pravděpodobně za účelem aktivního odpočinku.
-# Naše inference vyplívá z datové sady pouze nepřímo. O konkrétních aktivitách uživatelů informace nemáme. Jedná se pouze o jedno z možných vysvětlení.
+Z grafů níže lze vyčíst denní sezónnost, pravidelné cykly (špičky ráno/odpoledne, noční minimum), kalendářní vlivy (pracovní den vs víkend). Pracovní dny mají podobný průběh (špičky), víkend má nižší průběh (plošší křivka).Intradenní průběh dále zvýrazňuje výkyvy v čase.
+
+```{r}
+plot_cnt_days(get_subset(bike_sharing, days = 14), "Počet jízd (14 dní)")
+```
+```{r}
+plot_cnt_days(get_subset(bike_sharing, days = 7), "Počet jízd (7 dní)")
+```
+```{r}
+plot_cnt_hours(get_subset(bike_sharing, days = 2), "Počet jízd (2 pracovní dny)")
+```
+```{r}
+plot_cnt_hours(get_subset(bike_sharing, days = 1), "Počet jízd (pracovní den)")
+```
+
+V pracovní dny je zřejmá ranní a odpolední dopravní špička, zatímco o víkendu je průběh plošší a maximum nastává spíše odpoledne. Interpretace může být taková, že lidé chodí v pracovní dny ráno do práce/školy a odpoledne ze školy/práce, a proto si kolo v tento čas vypůjčují nejvíce. O víkendech si zase lidé obecně rádi přispí, takže nárust výpůjček začíná až v pozdějších dopoledních a odpoledních hodinách, pravděpodobně za účelem aktivního odpočinku. Naše inference vyplívá z datové sady pouze nepřímo. O konkrétních aktivitách uživatelů informace nemáme. Jedná se pouze o jedno z možných vysvětlení.
+
+```{r}
 hourly_cnt_means_by_day <- aggregate(cnt ~ hr + workingday, data = bike_sharing, FUN = mean)
 working_days <- subset(hourly_cnt_means_by_day, workingday == TRUE)
 weekends <- subset(hourly_cnt_means_by_day, workingday == FALSE)
@@ -67,36 +120,51 @@ axis(1, at=0:23, labels=0:23, cex.axis=0.8, tcl=-0.3)
 abline(v=0:23, col="lightgray", lty="dotted")
 grid(nx=NA, ny=NULL, col="gray", lty="dotted")
 legend("topleft", c("Pracovní den","Víkend"), lty=c(1,2), col=c("steelblue","darkred"), bty="n")
+```
 
-# Nejvíce jízd je během pracovních dnů, pátek mírně vyčnívá, víkendy jsou slabší.
-# Špičky jsou kolem 8:00 a 17:00, přičemž 18:00-4:00 počet jízd klesá až do úplných minim, a od 5:00 počet jízd zase vzrůstá.
-# Čím je lepší počasí, tím je více jízd.
+Nejvíce jízd je během pracovních dnů, pátek mírně vyčnívá, víkendy jsou slabší. Špičky jsou kolem 8:00 a 17:00, přičemž 18:00-4:00 počet jízd klesá až do úplných minim, a od 5:00 počet jízd zase vzrůstá.Zkrátka, čím lepší je počasí, tím je více jízd.
+
+```{r}
 boxplot(cnt ~ weekday, data=bike_sharing, xlab="Den v týdnu", ylab="Počet jízd", main="Rozdělení počtu jízd podle dne v týdnu")
+```
+```{r}
 boxplot(cnt ~ hr, data=bike_sharing, xlab="Hodina v týdnu", ylab="Počet jízd", main="Rozdělení počtu jízd podle hodiny dne")
+```
+```{r}
 boxplot(cnt ~ weathersit, data=bike_sharing, xlab="Počasí", ylab="Počet jízd", main="Rozdělení počtu jízd podle počasí")
+```
 
-# ii)
+### ii)
 
-# Trend se v průběhu 3 měsíců zvedá (od ledna směrem k jaru je průměrný počet jízd vyšší - to odpovídá nárustu jízd při lepším počasí).
-# Sezónní složka je kontstatní bez ohledu na trend (=aditivní).
+Trend se v průběhu 3 měsíců zvedá (od ledna směrem k jaru je průměrný počet jízd vyšší - to odpovídá nárustu jízd při lepším počasí). Sezónní složka je kontstatní bez ohledu na trend (=aditivní).
+
+```{r}
 cnt.ts <- ts(bike_sharing$cnt, frequency = 24)
 cnt.ts.decomposed <- decompose(cnt.ts, type = "additive")
 plot(cnt.ts.decomposed)
+```
 
-# Klouzavý průměr (24h) odfiltruje denní cyklus a ukáže čistější trend v datech.
-# Osa x symbolizuje počet dnů.
+Klouzavý průměr (24h) odfiltruje denní cyklus a ukáže čistější trend v datech. Osa x symbolizuje počet dnů.
+
+```{r}
 cnt.ts.rm24 <- rollmean(cnt.ts, k = 24, align = "center")
 plot(cnt.ts, col = "gray", xlab = "Den", ylab = "Počet jízd", main = "Počet jízd s klouzavým průměrem")
 lines(cnt.ts.rm24, col = "steelblue", lwd = 2)
 legend("topleft", legend = c("Původní řada", "Klouzavý průměr (24h)"), col = c("gray", "steelblue"), lty = 1, lwd = c(1, 2), bty = "n")
+```
 
-# iii)
+### iii)
 
+```{r}
+# Funkce vypočítá AIC předaných modelů a seřadí je od nejmenší hodnoty AIC po tu největší.
+# Platí, že čím menší hodnota AIC, tím je model podle tohoto kritéria lepší.
 compare_aic <- function(...) {
   a <- AIC(...)
   a[order(a$AIC), ]
 }
+```
 
+```{r}
 t <- 1:length(bike_sharing$cnt)
 model1 <- lm(cnt ~ t + factor(hr), data = bike_sharing); summary(model1)
 model2 <- lm(cnt ~ t + factor(hr) + factor(weekday), data = bike_sharing); summary(model2)
@@ -105,14 +173,18 @@ model4 <- lm(cnt ~ t + factor(hr) * factor(weekday) + temp + weathersit, data = 
 compare_aic(model1, model2, model3, model4)
 # cnt_t = β0 + β1·t + f(hr, weekday) + β2·temp_t + g(weathersit) + ε_t
 best_model_iii <- model4
+```
 
+```{r}
 (cnt.ts.hw <- HoltWinters(cnt.ts, seasonal = "additive"))
 plot(cnt.ts, main = 'Holt-Winters (aditivní)', xlab = 'Den', ylab = 'Počet jízd')
 lines(cnt.ts.hw$fitted[,1], col = 'red', lwd=1)
 legend("topleft", legend=c("Fit", "Data"), col=c("red", "black"), lty=1)
+```
 
-# iv)
+### iv)
 
+```{r}
 model1 <- Arima(cnt.ts, order=c(0,0,0), seasonal=list(order=c(1,1,1), period=24))
 model2 <- Arima(cnt.ts, order=c(1,0,0), seasonal=list(order=c(1,1,1), period=24))
 model3 <- Arima(cnt.ts, order=c(0,0,1), seasonal=list(order=c(1,1,1), period=24))
@@ -131,13 +203,17 @@ compare_aic(model1, model2, model3, model4, model5, model6, model7, model8)
 # Q=1 : Model zohlední, jak moc se spletl ve stejné hodině včera (učení z chyb).
 # s=24: Cyklus je 24 hodin.
 best_model_iv <- model2
+```
 
-# v)
+### v)
 
+```{r}
 temp.ts <- ts(bike_sharing$temp, frequency = 24)
 hum.ts <- ts(bike_sharing$hum, frequency = 24)
 windspeed.ts <- ts(bike_sharing$windspeed, frequency = 24)
+```
 
+```{r}
 # Funkce pro určení lagu s nejvyšší absolutní korelací.
 # Lag ukazuje, jestli se počet jízd mění hned, nebo až s nějakým zpožděním.
 # Př.: (cnt × temp) lag +1 = dívám se, jestli teplota před hodinou souvisí s počtem jízd teď.
@@ -161,16 +237,22 @@ determine_lag <- function(ccf_result) {
 
   return(c(lag = rounded_lag, corr = rounded_correlation, interpret = interpretation))
 }
-# 72 lagů = 3 dny dopředu i dozadu.
-# cnt × temp: kladná korelace, lag 0 -> okamžitý efekt teploty na počet jízd.
-# cnt × hum: záporná korelace, lag 0 -> okamžitý negativní efekt vlhkosti.
-# cnt × windspeed: slabá záporná korelace, lag +1 -> vítr před hodinou koreluje s menším počtem jízd nyní.
+```
+
+72 lagů = 3 dny dopředu i dozadu.
+- cnt × temp: kladná korelace, lag 0 -> okamžitý efekt teploty na počet jízd.
+- cnt × hum: záporná korelace, lag 0 -> okamžitý negativní efekt vlhkosti.
+- cnt × windspeed: slabá záporná korelace, lag +1 -> vítr před hodinou koreluje s menším počtem jízd nyní.
+
+```{r}
 print(determine_lag(ccf(cnt.ts, temp.ts, lag.max = 72, main = "Teplota")))
 print(determine_lag(ccf(cnt.ts, hum.ts, lag.max = 72, main = "Vlhkost")))
 print(determine_lag(ccf(cnt.ts, windspeed.ts, lag.max = 72, main = "Rychlost větru")))
+```
 
-# vi)
+### vi)
 
+```{r}
 # Exogenní proměnné dle CCF.
 # Exogenni = nezávislé proměnné, které ovlivňují časovou řadu, ale nejsou jí samotnou.
 # Počasí ovlivňuje počet jízd, ale samotný počet jízd nemění počasí.
@@ -178,32 +260,42 @@ temp_lag0 <- lag(temp.ts, k = 0)
 hum_lag0 <- lag(hum.ts, k = 0)
 windspeed_lag1 <- lag(windspeed.ts, k = 1)
 weather_variables <- c("temp_lag0", "hum_lag0", "windspeed_lag1")
+```
 
+```{r}
 # Oddělení cílové proměnné a exogenních proměnných.
 data <- cbind(cnt=cnt.ts, temp_lag0, hum_lag0, windspeed_lag1)
 data <- data[complete.cases(data), ]
 y <- data[, "cnt"]
 X <- data[, weather_variables]
+```
 
+```{r}
 # ARIMAX model (regrese + ARIMA errors).
 model <- auto.arima(y, xreg = X, seasonal=TRUE)
 summary(model)
 checkresiduals(model)
 best_model_vi <- model
+```
 
+```{r}
 # Proměnná windspeed (nevýznamná) -> vliv větru se nepotvrdil.
 ct <- coeftest(model)
 data.frame(
   p_value = ct[weather_variables, "Pr(>|z|)"],
   significance = ifelse(ct[weather_variables, "Pr(>|z|)"] < 0.05, "významná", "nevýznamná")
 )
+```
 
+```{r}
 acf(resid(best_model_iii), main="ACF residuí modelu ze zadání iii)")
 acf(resid(best_model_iv), main="ACF residuí modelu ze zadání iv)")
 acf(resid(best_model_vi), main="ACF residuí modelu ze zadání vi)")
+```
 
-# vii)
+### vii)
 
+```{r}
 aligned <- ts.intersect(cnt=cnt.ts, temp_lag0, hum_lag0, windspeed_lag1)
 future_X <- tail(aligned[, weather_variables], 10)
 f_iv <- forecast(best_model_iv, h=10)
@@ -212,15 +304,20 @@ par(mfrow=c(1,2))
 plot(f_iv, main="Predikce (ARIMA, iv)")
 plot(f_vi, main="Predikce (ARIMAX, vi)")
 par(mfrow=c(1,1))
+```
 
-# viii)
+### viii)
 
+```{r}
 rmse <- function(model) {
   sqrt(mean(residuals(model)^2, na.rm=TRUE))
 } 
+```
 
+```{r}
 data.frame(
   model = c("LM (iii)","ARIMA (iv)","ARIMAX (vi)"),
   AIC = c(AIC(best_model_iii), AIC(best_model_iv), AIC(best_model_vi)),
   RMSE = c(rmse(best_model_iii), rmse(best_model_iv), rmse(best_model_vi))
 )
+```
